--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #52525b; 
       }
-    </style>
+  </style>
   <script type="importmap">
 {
   "imports": {
@@ -38,6 +38,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-zinc-950 text-zinc-100 antialiased min-h-screen">
     <div id="root"></div>
